--- a/2JavaScript/project/rock paper scissor/index.html
+++ b/2JavaScript/project/rock paper scissor/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Rock Paper Scissor Game</h1>
-
+    <h4 id="score">No Game played Yet</h4>
     <p>Click On one of the following to play the game</p>
 
     <button class="choice-button" onclick="
